Use OpenRewrite to update code to make use of Java 11