@@ -19,7 +19,7 @@ package org.apache.poi.util;
 
 import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.ArrayList;
 
@@ -85,7 +85,7 @@ public class HexRead {
     }
 
     public static byte[] readData( String filename, String section ) throws IOException {
-        return readData(Files.newInputStream(Paths.get(filename)), section);
+        return readData(Files.newInputStream(Path.of(filename)), section);
     }
 
     @SuppressWarnings("fallthrough")
